[project]
name = "comprehensible-reading"
version = "0.1.0"
description = "Spanish and English reading level checker and reading tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
    "ebooklib>=0.18",
    "pymupdf>=1.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]
